Automatizar de array a diccionario iv.yaml

--- a/iv.yaml
+++ b/iv.yaml
@@ -4,5 +4,5 @@ entidad:
   - app/src/Evento.js
 
 automatizar:
-  - fichero: gulpfile.js
-  - orden: yarn gulp check
+  fichero: gulpfile.js
+  orden: yarn gulp check
