Selección de gestor de dependencias y tareas. Se han establecido los criterios antes de las comparativas y se han realizado de nuevo. close #16

--- a/iv.yaml
+++ b/iv.yaml
@@ -1,4 +1,9 @@
 lenguaje: node.js
 
 entidad:
-  - app/src/evento.js
+  - app/src/Evento.js
+
+automatizar:
+  fichero: gulpfile.js
+  orden: yarn gulp check
+  
