--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "packageManager": "yarn@3.3.0",
   "scripts": {
-    "start": "npm install yarn -g --save && yarn set version berry && yarn",
+    "setup": "npm install yarn -g --save && yarn set version berry && yarn",
     "check": "node --check ./src/services/evento.js & ./src/services/pago.js & ./src/services/usuario.js"
     
   },
