Elimino check de la orden close #27

--- a/iv.yaml
+++ b/iv.yaml
@@ -5,7 +5,7 @@ entidad:
 
 automatizar:
   fichero: package.json
-  orden: yarn run check
+  orden: yarn run
   
 test: 
   - src/tests/evento.test.js
