--- a/package.json
+++ b/package.json
@@ -6,8 +6,5 @@
     "check": "node --check ./src/services/evento.js & node --check ./src/services/pago.js & node --check ./src/services/usuario.js &",
     "test": "node --test"
   },
-  "type": "module",
-  "dependencies": {
-    "@faker-js/faker": "^7.6.0"
-  }
+  "type": "module"
 }
