--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "packageManager": "yarn@3.3.0",
   "scripts": {
-    "setup": "npm install yarn -g --save && yarn set version berry && yarn",
+    "setup": "yarn set version berry && yarn",
     "check": "node --check ./src/services/evento.js & node --check ./src/services/pago.js & node --check ./src/services/usuario.js &",
     "test": "node --test"
   },
