--- a/.github/workflows/actualizarImagen.yml
+++ b/.github/workflows/actualizarImagen.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: x
+    runs-on: ubuntu-latest
     steps:
     - name: Inicia sesión en DockerHub
       uses: docker/login-action@v2 
