--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "app",
-  "packageManager": "yarn@3.3.0",
+  "packageManager": "yarn@3.3.1",
   "scripts": {
-    "setup": "yarn set version berry && yarn",
+    "setup": "npm install -g yarn && yarn set version berry && yarn",
     "check": "node --check ./src/services/evento.js & node --check ./src/services/pago.js & node --check ./src/services/usuario.js &",
-    "test": "node --test"
+    "test": "node --test ./src/tests"
   },
   "type": "module"
 }
